--- a/style.css
+++ b/style.css
@@ -189,7 +189,7 @@ h1,h2,h3,h4,h5 {
   padding: 1em 0;
     display: block;
     color: #333;
-    text-decoration: none;
+   
 }
 
 .category-list a:hover{
@@ -295,4 +295,8 @@ padding: 1px;
 .arrow2{
   border-top-right-radius: 10px;
   border-bottom-right-radius: 10px;
+}
+
+.cat{
+ text-decoration: none;
 }
